# prx

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  Prx.toml  README.md  build.rs
.github/workflows/: ci.yml
docs/: CONFIG-PLAYBOOK.md  CONFIG-WIKI.md
ops/: FAILURE-DRILLS.md  ROLLBACK.md  SLO.md  ZERO-EXCEPTION-POLICY.md
ops/alerts/: prx-alerts.yml
scripts/: load-smoke.sh  release-gate.sh
src/: admin.rs  config.rs  main.rs  metrics.rs  proxy.rs  reload.rs  runtime.rs
tests/: e2e_proxy.rs
webui/: README.md  bun.lockb  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json
webui/src/: App.svelte  app.css
webui/src/lib/: configCodec.ts  configNormalize.ts
webui/src/lib/api/: admin.ts
webui/src/lib/components/: RouteCard.svelte
webui/src/lib/components/dashboard/: AppToolbar.svelte  ObservabilityCard.svelte  RouteDetailCard.svelte  RouteTableCard.svelte  ServerCard.svelte  StatsCard.svelte  TomlPreviewCard.svelte  ValidationCard.svelte
webui/src/lib/components/layout/: AppLayout.svelte  Sidebar.svelte
webui/src/lib/components/pages/: DashboardPage.svelte  RoutesPage.svelte  ServicesPage.svelte  SettingsPage.svelte
webui/src/lib/components/routes/: RouteDetailPanel.svelte  RouteFormModal.svelte
webui/src/lib/components/services/: ServiceFormModal.svelte
webui/src/lib/stores/: config.ts  navigation.ts
webui/src/lib/types/: config.ts
