[package]
name = "prx"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
arc-swap = "1"
async-trait = "0.1"
axum = "0.8"
bytes = "1"
http = "1"
include_dir = "0.7"
notify = "8"
once_cell = "1"
pingora = { version = "0.7", features = ["lb"] }
prometheus = "0.14"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["net", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3"

[patch.crates-io]
pingora-core = { path = "vendor/pingora-core" }
pingora-load-balancing = { path = "vendor/pingora-load-balancing" }
